--- a/Module_JavaSpringBoot_Day3/src/main/resources/application.properties
+++ b/Module_JavaSpringBoot_Day3/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+#spring.session.jdbc.table-name=SPRING_SESSIONS
+#spring.session.jdbc.initialize-schema=always
+#spring.session.store-type=none
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/lab1
+spring.datasource.username = root
+spring.datasource.password =
+
+
+#server.servlet.session.timeout=
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-@@platform@@.sql 
+spring.session.jdbc.table-name=SPRING_SESSION 
+
+config.upload_folder = //Users//admin//Desktop//Module_JavaSpingBoot//Module_JavaSpringBoot_Day3//src//main//resources//images//
