--- a/Module_JavaSpingBoot_Day6/pom.xml
+++ b/Module_JavaSpingBoot_Day6/pom.xml
@@ -23,6 +23,11 @@
             <version>5.6.1.Final</version>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.22</version>
+        </dependency>
+        <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
             <version>3.0.12.RELEASE</version>
