--- a/Module_JavaSpingBoot_Day15/src/main/resources/application.properties
+++ b/Module_JavaSpingBoot_Day15/src/main/resources/application.properties
@@ -1,1 +1,35 @@
+# ===============================
+# DATABASE
+# ===============================
+
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/lab15
+#spring.datasource.username=root
+#spring.datasource.password=
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+# ===============================
+# Graphql
+# ===============================
+
+#graphql.servlet.mapping: /apis/graphql
+
+
+# ===============================
+# WebLux
+# ===============================
+
+spring.r2dbc.url=r2dbc:mysql://localhost:3306
+spring.r2dbc.name=lab15
+spring.r2dbc.username=root
+spring.r2dbc.password=
+
 
