rename file UserDetailImpl and UserDetailServiceImpl

--- a/Module_JavaSpringBoot_Day19_02_JWT/src/main/resources/application.properties
+++ b/Module_JavaSpringBoot_Day19_02_JWT/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # ===============================
 
 #graphql.servlet.mapping: /apis/graphql
+
+jwt.app.JWT_SECRET=seabreeze
+jwt.app.JWT_EXPIRATION=604800000
