reset password when click into link in email

--- a/Module_JavaSpringBoot_Day21_01_SendMailResetPassWord/src/main/resources/application.properties
+++ b/Module_JavaSpringBoot_Day21_01_SendMailResetPassWord/src/main/resources/application.properties
@@ -1,9 +1,23 @@
-#spring.mail.host = smtp.gmail.com
-#spring.mail.username =teothiphong@gmail.com
-#spring.mail.password =phongTeo@#2910
-#spring.mail.port = 587
-#spring.mail.properties.mail.smtp.auth = true
-#spring.mail.properties.mail.smtp.starttls.enable = true
+# ===============================
+# DATABASE
+# ===============================
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/lab21
+spring.datasource.username=root
+spring.datasource.password=
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# ===============================
+# SendMail
+# ===============================
 
 mail.smtp.host: smtp.gmail.com
 mail.smtp.port: 587
