edit file login_form

--- a/Module_JavaSpringBoot_Day21_01_SendMailResetPassWord/src/main/resources/application.properties
+++ b/Module_JavaSpringBoot_Day21_01_SendMailResetPassWord/src/main/resources/application.properties
@@ -22,5 +22,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 mail.smtp.host: smtp.gmail.com
 mail.smtp.port: 587
 mail.smtp.username:chiphongteo1123@gmail.com
-mail.smtp.password:phongcao123
+mail.smtp.password:
 mail.smtp.auth: true
