sendmail with amazone email

--- a/Module_JavaSpringBoot_Day21_01_SendMailResetPassWord/src/main/resources/application.properties
+++ b/Module_JavaSpringBoot_Day21_01_SendMailResetPassWord/src/main/resources/application.properties
@@ -18,9 +18,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # ===============================
 # SendMail
 # ===============================
+#
+#mail.smtp.host: smtp.gmail.com
+#mail.smtp.port: 587
+#mail.smtp.username:chiphongteo1123@gmail.com
+#mail.smtp.password:
+#mail.smtp.auth: true
 
-mail.smtp.host: smtp.gmail.com
+mail.smtp.host: email-smtp.us-west-1.amazonaws.com
 mail.smtp.port: 587
-mail.smtp.username:chiphongteo1123@gmail.com
-mail.smtp.password:
+mail.smtp.username: AKIA5DWEWGJIHJJZGCXN
+mail.smtp.password: BP+kKjV7GuP8WGRY3Congrx7PxS+CQ2r2vASBCXvx/Us
 mail.smtp.auth: true
