--- a/Module_JavaSpringBoot_Day19_02_JWT/src/main/resources/application.properties
+++ b/Module_JavaSpringBoot_Day19_02_JWT/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 jwt.app.JWT_SECRET=seabreeze
 jwt.app.JWT_EXPIRATION=604800000
+
+bezkoder.app.jwtExpirationMs= 15000
+bezkoder.app.jwtRefreshExpirationMs= 30000
