remove username and pass amazone service acount

--- a/Module_JavaSpringBoot_Day21_01_SendMailResetPassWord/src/main/resources/application.properties
+++ b/Module_JavaSpringBoot_Day21_01_SendMailResetPassWord/src/main/resources/application.properties
@@ -27,6 +27,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 mail.smtp.host: email-smtp.us-west-1.amazonaws.com
 mail.smtp.port: 587
-mail.smtp.username: AKIA5DWEWGJIHJJZGCXN
-mail.smtp.password: BP+kKjV7GuP8WGRY3Congrx7PxS+CQ2r2vASBCXvx/Us
+mail.smtp.username: 
+mail.smtp.password: 
 mail.smtp.auth: true
